--- a/package.json
+++ b/package.json
@@ -3,29 +3,31 @@
   "description": "Styling editors for Neos CMS",
   "license": "GPL-3.0",
   "author": "Jon Uhlmann",
-  "main": "Resources/Private/Editor/index.mjs",
-  "module": "Resources/Private/Editor/index.mjs",
+  "type": "module",
+  "main": "Resources/Private/Editor/index.js",
+  "module": "Resources/Private/Editor/index.js",
   "exports": {
     ".": {
       "require": null,
-      "import": "./Resources/Private/Editor/index.mjs"
+      "import": "./Resources/Private/Editor/index.js"
     },
     "./TextAreaWithCounter": {
       "require": null,
-      "import": "./Resources/Private/Editor/TextAreaWithCounter/index.jsx"
+      "import": "./Resources/Private/Editor/TextAreaWithCounter/index.js"
     }
   },
   "files": [
     "Resources/Private/Editor",
-    "!Resources/Private/Editor/manifest.mjs"
+    "!Resources/Private/Editor/manifest.js"
   ],
   "repository": {
     "type": "git",
     "url": "git://github.com/CarbonPackages/Carbon.Editor.Styling.git"
   },
   "scripts": {
-    "build": "node build.mjs",
-    "watch": "node build.mjs --watch",
+    "build": "node build.js",
+    "watch": "node build.js --watch",
+    "dev": "node build.js --dev",
     "pipeline": "pnpm install --silent;pnpm build"
   },
   "bugs": {
@@ -33,13 +35,13 @@
   },
   "homepage": "https://github.com/CarbonPackages/Carbon.Editor.Styling#readme",
   "dependencies": {
-    "carbon-neos-loadinganimation": "^1.1.1",
-    "clsx": "^2.1.1"
+    "carbon-neos-loadinganimation": "^1.1.1"
   },
   "devDependencies": {
     "@neos-project/neos-ui-extensibility": "~8.3.10",
+    "@stylexjs/esbuild-plugin": "^0.9.3",
+    "@stylexjs/stylex": "^0.9.3",
     "esbuild": "^0.24.0",
-    "esbuild-plugin-lightningcss-modules": "^0.1.2",
     "prettier": "^3.4.1"
   },
   "peerDependencies": {
