--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     },
     "./TextAreaWithCounter": {
       "require": null,
-      "import": "./Resources/Private/Editor/TextAreaWithCounter/index.js"
+      "import": "./Resources/Private/Editor/TextAreaWithCounter.jsx"
+    },
+    "./BorderRadius": {
+      "require": null,
+      "import": "./Resources/Private/Editor/BorderRadius.jsx"
     }
   },
   "files": [
-    "Resources/Private/Editor",
-    "!Resources/Private/Editor/manifest.js"
+    "Resources/Private",
+    "!Resources/Private/Editor/Editor.js"
   ],
   "repository": {
     "type": "git",
@@ -35,12 +39,13 @@
   },
   "homepage": "https://github.com/CarbonPackages/Carbon.Editor.Styling#readme",
   "dependencies": {
-    "carbon-neos-loadinganimation": "^1.1.1"
+    "@stylexjs/stylex": "^0.9.3",
+    "carbon-neos-loadinganimation": "^1.1.1",
+    "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "@neos-project/neos-ui-extensibility": "~8.3.10",
     "@stylexjs/esbuild-plugin": "^0.9.3",
-    "@stylexjs/stylex": "^0.9.3",
     "esbuild": "^0.24.0",
     "prettier": "^3.4.1"
   },
