Update: Set max value

--- a/Configuration/Settings.Config.yaml
+++ b/Configuration/Settings.Config.yaml
@@ -41,5 +41,5 @@ Neos:
           allowSync: true
           convertToRem: false
           min: 0
-          max: null
+          max: 999
           placeholder: ''
