--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "@neos-project/neos-ui-extensibility": "~8.3.10",
     "@stylexjs/esbuild-plugin": "^0.9.3",
     "esbuild": "^0.24.0",
-    "prettier": "^3.4.1"
+    "prettier": "^3.4.1",
+    "react-draggable": "^4.4.6"
   },
   "peerDependencies": {
     "@neos-project/neos-ui-extensibility": "^8.3.0 || ^9.0.0"
