--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     },
     "./BorderRadius": {
       "require": null,
-      "import": "./Resources/Private/Editor/BorderRadius.jsx"
+      "import": "./Resources/Private/Editor/BorderRadius/index.jsx"
+    },
+    "./Spacing": {
+      "require": null,
+      "import": "./Resources/Private/Editor/Spacing/index.jsx"
     }
   },
   "files": [
@@ -41,14 +45,14 @@
   "dependencies": {
     "@stylexjs/stylex": "^0.9.3",
     "carbon-neos-loadinganimation": "^1.1.1",
+    "react-draggable": "^4.4.6",
     "use-debounce": "^10.0.4"
   },
   "devDependencies": {
-    "@neos-project/neos-ui-extensibility": "~8.3.10",
+    "@neos-project/neos-ui-extensibility": "~8.3.11",
     "@stylexjs/esbuild-plugin": "^0.9.3",
     "esbuild": "^0.24.0",
-    "prettier": "^3.4.1",
-    "react-draggable": "^4.4.6"
+    "prettier": "^3.4.2"
   },
   "peerDependencies": {
     "@neos-project/neos-ui-extensibility": "^8.3.0 || ^9.0.0"
