Update: Add current and default color settings to border editor

--- a/Configuration/Settings.Config.yaml
+++ b/Configuration/Settings.Config.yaml
@@ -31,6 +31,8 @@ Neos:
           allowColor: true
           allowColorPicker: true
           allowColorInput: true
+          allowCurrentColor: true
+          defaultColor: 'currentColor'
           borderStyles:
             solid: true
             dashed: true
