--- a/Configuration/Settings.Config.yaml
+++ b/Configuration/Settings.Config.yaml
@@ -15,6 +15,12 @@ Neos:
           #  name: 'Open Sans'
           #  fallback: 'Helvetica, Arial, sans-serif'
 
+          # A path to a CSS file with @font-face declarations. Can be a resource:// or a http(s):// path
+          cssFile: false
+
+          # Sort the fonts by name
+          sortFonts: true
+
           # If set to false, only the font name is stored in the database
           enableFallback: true
           # Show icon if the font has a font file or a css file
@@ -34,9 +40,9 @@ Neos:
           #   fontWeight: 600
           #   # Optional: The font style. If not set the default style "normal" is used
           #   fontStyle: italic
-          #   # Optional: The file path to the font file. Can be a resource:// or a http(s):// path
+          #   # Optional: The file path to the font file. Can be a resource:// or a http(s):// path. true shows only the icon
           #   fontFile: 'resource://Vendor.Package/Fonts/OpenSans.woff2'
-          #   # Optional: A path to a CSS file with @font-face declarations. Can be a resource:// or a http(s):// path
+          #   # Optional: A path to a CSS file with @font-face declarations. Can be a resource:// or a http(s):// path, true shows only the icon
           #   cssFile: "https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,600"
           #   # Optional and only used if fontFile is set: The font format. If not set the format is guessed from the file extension
           #   fontFileFormat: 'woff2'
