--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@neos-project/neos-ui-extensibility": "~8.3.11",
     "@stylexjs/esbuild-plugin": "^0.9.3",
     "esbuild": "^0.24.0",
+    "fuzzysearch": "^1.0.3",
     "prettier": "^3.4.2"
   },
   "peerDependencies": {
