Update: Add transparent color to border

--- a/Configuration/Settings.Config.yaml
+++ b/Configuration/Settings.Config.yaml
@@ -39,6 +39,7 @@ Neos:
           allowColorPicker: true
           allowColorInput: true
           allowCurrentColor: true
+          allowTransparent: false
           defaultColor: 'currentColor'
           borderStyles:
             solid: true
