--- a/.gitattributes
+++ b/.gitattributes
@@ -12,4 +12,5 @@
 /Makefile export-ignore
 /package.json export-ignore
 /pnpm-lock.yaml export-ignore
+/pnpm-workspace.yaml export-ignore
 /Resources/Private/Editor export-ignore
