--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
       "require": null,
       "import": "./Resources/Private/Editor/TextInput.js"
     },
+    "./Timestamp": {
+      "require": null,
+      "import": "./Resources/Private/Editor/Timestamp.js"
+    },
     "./Dropdown": {
       "require": null,
       "import": "./Resources/Private/Editor/Dropdown.js"
@@ -63,7 +67,7 @@
   },
   "homepage": "https://github.com/CarbonPackages/Carbon.Editor.Styling#readme",
   "dependencies": {
-    "@stylexjs/stylex": "^0.14.3",
+    "@stylexjs/stylex": "^0.17.4",
     "carbon-neos-loadinganimation": "^1.2.0",
     "react-colorful": "^5.6.1",
     "react-draggable": "^4.5.0",
@@ -72,9 +76,9 @@
   },
   "devDependencies": {
     "@neos-project/neos-ui-extensibility": "~8.3.16",
-    "@stylexjs/esbuild-plugin": "^0.11.1",
-    "esbuild": "^0.25.10",
-    "prettier": "^3.6.2"
+    "@stylexjs/unplugin": "^0.17.4",
+    "esbuild": "^0.27.2",
+    "prettier": "^3.7.4"
   },
   "peerDependencies": {
     "@neos-project/neos-ui-extensibility": "^8.3.0 || ^9.0.0"
