--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,12 +4,13 @@ on:
   release:
     types: [published]
 
+permissions:
+  id-token: write  # Required for OIDC
+  contents: read
+
 jobs:
   publish:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      id-token: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -21,4 +22,4 @@ jobs:
       - name: Bump version
         uses: BellCubeDev/update-package-version-by-release-tag@v2
       - name: Publish
-        run: npm publish --provenance --access public
+        run: npm publish --access public
