--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,5 +21,5 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - name: Bump version
         uses: BellCubeDev/update-package-version-by-release-tag@v2
-      - name: Publish
-        run: npm publish --access public
+      - run: npm ci
+      - run: npm publish --access public
